<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F6ECCF"
    android:orientation="vertical"
    tools:context=".Third_Activity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20px"
        android:fontFamily="@font/lemon"
        android:shadowColor="#FFFFFF"
        android:text="ID"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#1E2959" />

    <EditText
        android:id="@+id/etID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:fontFamily="@font/lemon" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lemon"
        android:shadowColor="#FFFFFF"
        android:text="@string/Name"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#1E2959" />

    <EditText
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lemon"
        android:hint="@string/hint1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lemon"
        android:shadowColor="#FFFFFF"
        android:text="@string/desc"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#1E2959" />

    <EditText
        android:id="@+id/etDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lemon"
        android:hint="@string/hint2" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lemon"
        android:shadowColor="#FFFFFF"
        android:text="@string/c"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#1E2959" />

    <EditText
        android:id="@+id/etCountry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lemon"
        android:hint="@string/hint3" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lemon"
        android:shadowColor="#FFFFFF"
        android:text="@string/stars"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#1E2959" />

    <RatingBar
        android:id="@+id/ratingbarStars"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:numStars="5"
        android:rating="2"
        android:stepSize="1" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btnUpdate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20px"
            android:layout_marginRight="20px"
            android:layout_weight="1"
            android:fontFamily="@font/lemon"
            android:text="Update"
            app:backgroundTint="#1E2959" />

        <Button
            android:id="@+id/btnDelete"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/lemon"
            android:text="Delete"
            app:backgroundTint="#1E2959" />

    </LinearLayout>

    <Button
        android:id="@+id/btnCancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/lemon"
        android:text="Cancel"
        app:backgroundTint="#1E2959" />

</LinearLayout>